force-app/main/default/objects/Sales_Order_Details__c/Sales_Order_Details__c.object-meta.xml
<CustomObject>
    <label>DN-Sales Order Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>