force-app/main/default/objects/Sales_Order_Details__c/fields/Back_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Back_Order_Quantity__c</fullName>
    <label>Back Order Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>