force-app/main/default/objects/Sales_Order_Details__c/fields/Committed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Committed_Quantity__c</fullName>
    <label>Committed Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>