force-app/main/default/objects/Sales_Order_Details__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>