force-app/main/default/objects/Sales_Order_Details__c/fields/Extended_Amount__c.field-meta.xml
<CustomField>
    <fullName>Extended_Amount__c</fullName>
    <formula>Order_Quantity__c * ROUND(Unit_Price__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>