force-app/main/default/objects/Sales_Order_Details__c/fields/Extended_Amount_MC__c.field-meta.xml
<CustomField>
    <fullName>Extended_Amount_MC__c</fullName>
    <formula>IF(MC_Conversion_Type__c=&quot;&quot;, Order_Quantity__c * Unit_Price__c,
CASE ( MC_Conversion_Type__c , 
&quot;/&quot;,(Order_Quantity__c * Unit_Price__c) * MC_Conversion_Rate__c ,
&quot;*&quot;,(Order_Quantity__c * Unit_Price__c) / MC_Conversion_Rate__c ,
Order_Quantity__c * Unit_Price__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Amount MC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>