force-app/main/default/objects/Sales_Order_Details__c/fields/External_Sales_Order_Detail_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Sales_Order_Detail_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Sales Order Detail ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>