force-app/main/default/objects/Sales_Order_Details__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>This is the lookup link to the Orders custom object/table.</description>
    <label>Order Number</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipName>Order_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>