force-app/main/default/objects/Sales_Order_Details__c/fields/Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_Quantity__c</fullName>
    <label>Order Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>