force-app/main/default/objects/Sales_Order_Details__c/fields/Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Part_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Part Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>