force-app/main/default/objects/Sales_Order_Details__c/fields/Specific_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Specific_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specific Pricing</label>
    <type>Checkbox</type>
</CustomField>