force-app/main/default/objects/Sales_Order_Details__c/fields/Unit_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Measure__c</fullName>
    <description>This field is imported from the SalesOrders.xls file from Vito Barrina( June 1, 2007 ).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit/Measure</label>
    <length>10</length>
    <type>Text</type>
</CustomField>