force-app/main/default/objects/Sales_Order_Details__c/recordTypes/DN_CA_Sales_Order_Details_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>DN_CA_Sales_Order_Details_Record_Type</fullName>
    <active>true</active>
    <label>DN-CA-Sales Order Details Record Type</label>
</RecordType>